<resources>
    <string name="app_name">KrokoDeal</string>
    <string name="start">Играть</string>
    <string name="ruler">Правила</string>
    <string name="timer_check_label">Использовать таймер</string>
    <string name="timer_minutes_hint">минут</string>
    <string name="timer_sec_hint">секунд</string>
    <string name="timer_separator">:</string>
    <string name="add_confirm">Добавить</string>
    <string name="add_cancel">Отмена</string>
    <string name="players">Игроки</string>
    <string name="add_player">Добавить</string>
    <string name="add_new_player">Введи имя нового игрока</string>
    <string name="start_game">Начать</string>
    <string name="player">Игрок</string>
    <string name="player_name_mock">Глокая куздра</string>
    <string name="shows_word">показывает слово</string>
    <string name="enter_word">введи слово</string>
    <string name="show">Показывать</string>
    <string name="guessed">Отгадано</string>
    <string name="not_guessed">Не отгадано</string>
    <string name="time_zero">00</string>
    <string name="host">Ведущий</string>
    <string name="snackbar_fail">Время истекло, слово не отгадано :(</string>
    <string name="snackbar_choose_host">Выбери ведущего что бы начать</string>
    <string name="snackbar_add_more_players">Добавь минимум трёх игроков</string>
    <string name="snackbar_set_timer">Установи время таймера</string>
    <string name="snackbar_set_timer_correct">Неправильное время таймера</string>
    <string name="snackbar_player_exists">Игрок с таким именем уже существует</string>
    <string name="snackbar_empty_word">Загадай слово ведущему</string>
    <string name="who_guessed">Кто отгадал?</string>
    <string name="results">Результаты</string>
    <string name="game_rules"><![CDATA[<div>Ведущий загадывает слово и человек пытается его изобразить, а остальная компания угадывает, что было загадано.</div>
<div><b>Показывая слово МОЖНО:</b></div>
<div>Двигать и махать всем, чем угодно &mdash; ногами, руками, глазами, языком, да хоть ушами!</div>
<div>Можно принимать совершенно любые позы &mdash; становитесь на мостик, делайте звездочку и тд</div>
<div>Можно отвечать на вопросы отгадывающих &mdash; но опять же, только ЖЕСТАМИ</div>
<div>Можно чертить в воздухе, на заборе и где угодно фигуры (но только так, чтобы не оставалось никакого следа!)</div>
<div>Можно показывать на предметы одежды, украшений, части тела, но главное условие &mdash; все это должно находиться при вас</div>
<div>Словосочетание (например, пословицу) можно показывать отдельными словами</div>
<div><b>Чего делать НЕЛЬЗЯ:</b></div>
<div>Разговаривать и произносить любые звуки (разрешаются только звуки, связанные с выражением эмоций)</div>
<div>Показывать на окружающие предметы и, тем более, брать их в руки или еще как-то использовать</div>
<div>Произносить слова беззвучно, используя губы</div>
<div>Рисовать и вообще оставлять какие-то видимые следы</div>
<div>Показывать отдельные буквы</div>
<div>Изображать слово по частям (слогам)</div>]]>
</string>
    <string name="rules_activity_label">Правила</string>
    <string name="guessed_stat">Отгадано слов</string>
    <string name="show_success">Показано отгаданных слов</string>
    <string name="show_failure">Показано неотгаданных слов</string>
    <string name="stats_load_failure">Не удалось загрузить результаты :(</string>
    <string name="settings">Настройки</string>
</resources>
